# dolphin

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  dolphin.cpp  main.dol
.github/workflows/: build.yml
docs/: README.md
my_scripts/: bmi.dol  breakout.dol  calc.dol  mario.dol  pong.dol  test.dol  test_func.dol  window.dol
src/: dolphin.cpp  main.cpp
src/interpreter/: Builtins.cpp  DolphinInterpreter.cpp  DolphinInterpreter.h  GraphicsBuiltins.cpp
